# cmake_tutorial

./: LICENSE  README.md
demo1/: CMakeLists.txt  main.c
demo2/: CMakeLists.txt
demo3/: CMakeLists.txt
demo4/: CMakeLists.txt  main.c
demo5/: CMakeLists.txt
demo5_2/: CMakeLists.txt
demo6/: CMakeLists.txt  config.h.in  main.c
demo7/: CMakeLists.txt  main.c
demo7/math/: CMakeLists.txt
demo8/: CMakeLists.txt  config.h.in
demo9/: CMakeLists.txt  main.c
